cmake_minimum_required(VERSION 3.4)
project(formatter_ex)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/solver_application)
add_library(solverlib STATIC lab05/solver_lib/solver.cpp)
target_include_directories(solverlib PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../solver_lib)
add_executable(solver equation.cpp)
target_link_libraries(solver ${CMAKE_CURRENT_SOURCE_DIR}/../libformatter_ex.a)
target_include_directories(solver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_ex_lib)
target_include_directories(solver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../formatter_lib)
target_link_libraries(solver ${CMAKE_CURRENT_SOURCE_DIR}/../libformatter.a)
target_link_libraries(solver solverlib)
